plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'co.edu.uniquindio'
version = '0.0.1-SNAPSHOT'
description = 'Proyecto de programacion avanzada del 2025-2'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'

    // Spring Data JPA con Hibernate
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Driver de MariaDB
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.3.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // MapStruct
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    // Spring Security (para BCrypt)
    implementation 'org.springframework.security:spring-security-crypto'

    // Email - Simple Java Mail
    implementation 'org.simplejavamail:simple-java-mail:8.12.6'
    implementation 'org.simplejavamail:batch-module:8.12.6'

    // Cloudinary - Image Management
    implementation 'com.cloudinary:cloudinary-http5:2.3.2'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}